[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Menu/MenuScripts/ButtonContainer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 47
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 47
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 47
font_data = ExtResource( 3 )

[node name="Stage" type="Node2D"]

[node name="Center" type="CenterContainer" parent="."]
margin_left = 183.0
margin_top = 194.0
margin_right = 832.0
margin_bottom = 606.0

[node name="ButtonContainer" type="VBoxContainer" parent="Center"]
margin_left = 324.0
margin_top = 206.0
margin_right = 324.0
margin_bottom = 206.0
alignment = 1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="Center/ButtonContainer"]
layer = 4

[node name="Settings_Button" type="Button" parent="Center/ButtonContainer/CanvasLayer"]
margin_left = 336.0
margin_top = 514.0
margin_right = 689.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="GameTextLabel" type="RichTextLabel" parent="Center/ButtonContainer/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.5
margin_top = -156.5
margin_right = 286.5
margin_bottom = -61.5
custom_fonts/normal_font = SubResource( 2 )
text = "Community Game"

[node name="Exit_Button" type="Button" parent="Center/ButtonContainer/CanvasLayer"]
margin_left = 335.0
margin_top = 414.0
margin_right = 693.0
margin_bottom = 495.0
custom_fonts/font = SubResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Button" type="Button" parent="Center/ButtonContainer/CanvasLayer"]
margin_left = 336.0
margin_top = 308.0
margin_right = 687.0
margin_bottom = 388.0
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_left = -448.0
margin_top = -368.0
margin_right = 1592.0
margin_bottom = 1054.0
color = Color( 0.0117647, 0.65098, 0.933333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
current = true

[connection signal="pressed" from="Center/ButtonContainer/CanvasLayer/Settings_Button" to="Center/ButtonContainer" method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="Center/ButtonContainer/CanvasLayer/Exit_Button" to="Center/ButtonContainer" method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="Center/ButtonContainer/CanvasLayer/Start_Button" to="Center/ButtonContainer" method="_on_Start_Button_pressed"]
